# ai-qa-toolbox

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  demo-gif.yml
agent/: __init__.py  classifier.py  fix_logger.py  fixer.py  llm_backend.py  memory_store.py  models.py  react_agent.py  sandbox_runner.py  tools.py  zap_wrapper.py
agentic-ui-auditor/: Dockerfile  api.py  auditor.py
agentic-ui-auditor/tests/: test_screenshot.py
agents/: run_all_agents.py
agents/log_classifier/: main.py  sample_log.txt
agents/selector_healer/: main.py
ai_qa_toolbox/: __init__.py
ai_qa_toolbox/core/: __init__.py
ai_qa_toolbox/core/llm/: __init__.py  client.py
ai_qa_toolbox/ui_auditor/: __init__.py  screenshot.py
api/: __init__.py  main.py  stats.py
config/: loader.py  repos.json
core/llm/: client.py
docs/: architecture.md  ci_secrets.md  demo.cast  demo.gif.placeholder  demo_script.md  record_demo.sh
docs/retrospectives/: week-02.md
notifications/: slack_notifier.py
scripts/: seed_memory.py  smoke_test_spider.py
templates/: dashboard.html
tests/: test_agent.py  test_classifier_adversarial.py  test_day10.py  test_day11.py  test_day12.py  test_day8.py  test_day9.py  test_sample.py
