[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-qa-toolbox"
version = "0.1.0"
description = "AI-powered QA automation tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "playwright",
    "langchain",
    "langchain-community",
    "langchain-core",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "docker",
    "chromadb",
    "requests",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ai_qa_toolbox*", "agent*", "api*", "scripts*", "config*", "notifications*"]
